GNOME Bugzilla – Bug 682469
Fix network device activation
Last modified: 2012-08-22 14:33:31 UTC
The wired and mobile "on/off" buttons got broken at some point since 3.4. Noticed while writing the second patch, which fixes it to work correctly in the presence of bond slave connections.
Created attachment 222147 [details] [review] network: fix wired/mobile activation You have to pass the NMDevice to nm_client_activate_connection() for a device-specific connection. This got broken at some point in the rewrites since 3.4.
Created attachment 222148 [details] [review] network: don't try to activate slave connections
First patch looks good to me, thanks. I think you're in a better position than me to review the second one. :) Please push to master.
Attachment 222147 [details] pushed as 8df1069 - network: fix wired/mobile activation Attachment 222148 [details] pushed as 8f1b6d6 - network: don't try to activate slave connections